package com.optionfusion.backend.protobuf;

message OptionChain {
	repeated OptionDateChain optionDates = 1;
	required int64 timestamp = 2;
        required string symbol = 3;
        required double underlyingPrice = 4;
}

message OptionQuote {
	required double strike = 1;
	optional double bid = 2;
	optional double ask = 3;
	optional double last = 4;
	enum OptionType {
		PUT = 0;
		CALL = 1;
	}
	required OptionType optionType = 6 [default = CALL];
	optional int32 openInterest = 7;
	optional double iv = 8;
	optional double delta = 9;
	optional double gamma = 10;
	optional double theta = 11;
	optional double vega = 12;
	optional int64 volume = 13;
	optional int32 multiplier = 14 [default = 100]; 
}

message OptionDateChain {
	required int64 expiration = 1;
	repeated OptionQuote options = 2;
}

